# bitris-commands

./: Cargo.toml  README.md
.github/workflows/: tests.yaml
acceptance_tests/: Cargo.toml
acceptance_tests/src/: main.rs  pc_possible.rs
benches/: all_pcs.rs  pc_possible.rs  pc_rates.rs
example/: Cargo.toml
example/src/: pc_possible.rs
examples/: pc_possible.rs
src/: bit_shapes.rs  clipped_board.rs  hold_expanded_pattern.rs  hold_expanded_pattern_shape_matcher.rs  internal_macros.rs  lib.rs  pattern.rs  pattern_shape_matcher.rs  patterns.rs  shape_counter.rs  shape_order.rs  shape_sequence.rs  traits.rs
src/all_pcs/: aggregator.rs  binder.rs  binder_from_counters.rs  binder_from_order.rs  binder_from_pattern.rs  builder.rs  bulk_executor.rs  bulk_executor_from_counters.rs  bulk_executor_from_pattern.rs  executor.rs  executor_from_counters.rs  executor_from_order.rs  executor_from_pattern.rs  mod.rs  nodes.rs  pc_solutions.rs  predefined_piece.rs  visit.rs
src/commands/: mod.rs  pc_rate.rs
src/internals/: array4.rs  clipped_board.rs  fuzzy_shape.rs  fuzzy_shape_order.rs  mod.rs
src/pc_possible/: binder.rs  binder_bulk.rs  buffer.rs  bulk_binder.rs  bulk_executor.rs  execute_instruction.rs  executor.rs  executor_bulk.rs  mod.rs  pc_results.rs  vertical_parity.rs
tests/: all_pcs.rs  pc_possible.rs
