[package]
name = "bitris_commands"
version = "0.2.0"
edition = "2021"
authors = ["knewjade"]

[dependencies]
bitris = { git = "https://github.com/knewjade/bitris.git", rev = "906cbc13e73c2a65fe6385b9e35715a02738ec00" }
itertools = "0.10.5"
bitvec = "1.0.1"
fxhash = "0.2.1"
tap = "1.0.1"
derive_more = "0.99.17"
thiserror = "1.0.38"
tinyvec = "1.6.0"

[dev-dependencies]
criterion = { version = "0.4.0", features = ["html_reports"] }
rstest = "0.16.0"

[lib]
bench = false

#[profile.test]
#opt-level = 3
#debug = false

[[bench]]
name = "pc_possible"
harness = false

[[bench]]
name = "all_pcs"
harness = false

[profile.release]
debug = true
