[package]
name = "bitris_commands"
version = "0.2.0"
edition = "2021"
authors = ["knewjade"]

[dependencies]
bitris = { git = "https://github.com/knewjade/bitris.git", rev = "b75bdf087eea14f4729c57df75fe20c512fbf5ea" }
itertools = "0.12.1"
bitvec = "1.0.1"
fxhash = "0.2.1"
tap = "1.0.1"
derive_more = "0.99.17"
thiserror = "1.0.38"
tinyvec = "1.6.0"

[dev-dependencies]
criterion = { version = "0.5.1", features = ["html_reports"] }
rstest = "0.18.2"

[lib]
bench = false

#[profile.test]
#opt-level = 3
#debug = false

[[bench]]
name = "pc_possible"
harness = false

[[bench]]
name = "all_pcs"
harness = false

[profile.release]
debug = true
